@@ -1,3 +1,8 @@
+2019-04-02  DJ Delorie  <dj@redhat.com>
+
+	* time/tst-strftime3.c: Add new Japanese era tests.  Fix printf
+	warning.
+
 2019-04-02  TAMUKI Shoichi  <tamuki@linet.gr.jp>
 
 	[BZ #22964]
